--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flarum/core",
+    "name": "izapbrasil/core",
     "description": "Delightfully simple forum software.",
     "keywords": ["forum", "discussion"],
     "homepage": "https://flarum.org/",
